--- a/styles.css
+++ b/styles.css
@@ -473,6 +473,13 @@ html {
     background-color: white;
 	-webkit-font-smoothing: antialiased;
 }
+noscript {
+  position: fixed;
+  z-index: 100;
+  background-color: hsl(20, 100%, 29%);
+  color: white;
+  width: 100%;
+}
 #content {
       background-color: white;
 }
@@ -498,7 +505,7 @@ input[type=checkbox], input[type=radio] {
   text-align: center;
 }
 a {
-  color: #0098E5  ;
+  color: hsl(200, 100%, 45%)  ;
   text-decoration: none;
 }
 h2, h3 {
@@ -510,12 +517,11 @@ h2, h3 {
 .charmap {
   color:#ccc;
 }
-::-moz-selection { 
+.wrapper::-moz-selection { 
 background-color: #0098E5  ; 
 color: #ffffff;
 }
-
-::selection {
+.select ::selection {
 background-color: #0098E5;
 color: #ffffff;
 }
@@ -526,7 +532,6 @@ color: #ffffff;
 body {
   font-size: 3.2654vw;
   line-height: 1.5em;
-  max-font-size: 24px;  
   min-font-size: 18px;
 }
 h1,h2,h3 {font-weight: normal;}
@@ -535,7 +540,6 @@ h1 {
   margin-top: 72px;
   margin-bottom: 36px;
   font-size: 35vw;
-  max-font-size: 300px;
 }
 h2, .charmap {
   letter-spacing: -0.05em;  
@@ -543,7 +547,6 @@ h2, .charmap {
   line-height: 1.2em;
   margin-top: 0.38em;
   margin-bottom: -0.10em;
-  max-font-size: 63px;
   min-font-size: 35px;
 }
 .charmap {
@@ -557,7 +560,6 @@ h3 {
   line-height: 1.8461538462em;
   margin-top: 1.24em;
   margin-bottom: -1.24em;
-  max-font-size: 39px;
   min-font-size: 25px;
 }
 p, ul, ol, pre, table, blockquote {
@@ -785,4 +787,20 @@ p, ul, ol, pre, table, blockquote {
     70% {text-shadow: rgba(0,0,0,1) 0 0 10px }
     90% {text-shadow: rgba(0,0,0,0) 0 0 20px }
     100% {text-shadow: rgba(0,0,0,0) 0 0 3px }
+}
+
+
+@media all and (min-width: 740px) {
+body {
+  font-size: 24px;  
+}
+h1 {
+  font-size: 300px;
+}
+h2, .charmap {
+  font-size: 63px;
+}
+h3 {
+  font-size: 39px;
+}  
 }
