--- a/styles.css
+++ b/styles.css
@@ -444,14 +444,14 @@ td.tabular {
 .jumbotron:before {
   content:'';
   position:absolute;
-  bottom:0;
   height:100%;
-  right:0;
+  width:100%;
   left:0;
+  top:0;
   background-image:linear-gradient(to top,rgba(255,255,255,1) 0%,rgba(255,255,255,.98) 4%,rgba(255,255,255,.94) 8%,rgba(255,255,255,.85) 12%,rgba(255,255,255,.76) 16%,rgba(255,255,255,.72) 20%,rgba(255,255,255,.7) 24%,rgba(255,255,255,.7) 100%);
   opacity:1;
   filter:alpha(opacity=100);
-  z-index:-1
+  z-index:10;
 }
 
 @-webkit-keyframes fade {
@@ -482,6 +482,7 @@ td.tabular {
   width:100%
 }
 .jumbotron h1 {
+  z-index: 20;
   -webkit-animation:scale 2s ease forwards;
           animation:sclae 2s ease forwards;
 }
@@ -535,7 +536,8 @@ td.tabular {
   margin-right:auto;
   left:0;
   right:0;
-  text-align:center
+  text-align:center;
+  z-index: 20;    
 }
 
 #scrollhelp.boom {
