--- a/styles.css
+++ b/styles.css
@@ -226,16 +226,17 @@ noscript {
   width: 100%;
   padding-top: 10px;
   height: 35px;
+  z-index: 100;  
 }
 .social.fixed svg {
   width:20px;
 }
 
 .wrapper {
-  max-width:740px;
+  max-width:760px;
   margin:0 auto;
   box-sizing:border-box;
-  padding:0 20px 10vw
+  padding:0 30px 10vw
 }
 
 input[type=checkbox],input[type=radio] {
@@ -417,6 +418,28 @@ td.tabular {
           font-feature-settings: "salt" 1;
 }
 */
+
+
+/*Slider*/
+.screenshots {
+  margin-top: 1.5em;
+}
+.screenshots .slick-slide {
+  height: auto;
+}
+.screenshots img {
+  max-width: 100%;
+/*  height: 100%;*/
+}
+.screenshots .slick-prev::before, .screenshots .slick-next::before {
+  color:hsl(200, 11%, 35%);
+}
+.screenshots .slick-dots {
+  bottom: 0px ;
+}
+.screenshots ul {
+  margin: 0;
+}
 
 
 /*JUMBOTRON*/
