--- a/styles.css
+++ b/styles.css
@@ -478,6 +478,32 @@ td.tabular {
 }
 
 
+/*POPUP*/
+#overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.9);
+  cursor: pointer;
+  display:-webkit-flex;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-align-items:center;
+      -ms-flex-align:center;
+          align-items:center;
+  -webkit-justify-content:center;
+      -ms-flex-pack:center;
+          justify-content:center;
+  -webkit-animation:fade .5s ease forwards;
+          animation:fade .5s ease forwards;
+}
+#overlay h2, #overlay p {
+  color: white !important;
+}
+
+
 /*JUMBOTRON*/
 .jumbotron {
   height:100%;
