--- a/styles.css
+++ b/styles.css
@@ -331,6 +331,10 @@ h2,h3 {
 .facebookicon:focus path {
   fill:#3b5998 !important;
 }
+.googleicon:hover path,
+.googleicon:focus path {
+  fill:#dd4b39 !important;
+}
 .pinteresticon:hover path,
 .pinteresticon:focus path {
   fill:#cc2127 !important;
