--- a/styles.css
+++ b/styles.css
@@ -187,10 +187,10 @@ td,th {
     font-style: normal;
 }
 @font-face {
-    font-family: 'gidole_playregular';
-    src: url('fonts/gidoleplay-regular.woff2') format('woff2'),
-         url('fonts/gidoleplay-regular.woff') format('woff'),
-         url('fonts/gidoleplay-regular.ttf') format('truetype');
+    font-family: 'gidolinyaregular';
+    src: url('fonts/gidolinya-regular.woff2') format('woff2'),
+         url('fonts/gidolinya-regular.woff') format('woff'),
+         url('fonts/gidolinya-regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -304,8 +304,8 @@ h2,h3 {
   color:hsl(200, 8%, 59%)
 }
 .social.fixed {
-  background-color: rgba(255,255,255,0.9);
-  border-bottom: 1px solid hsl(200, 23%, 90%);
+  background-color: rgba(255,255,255,0.95);
+  border-bottom: 1px solid hsl(200, 11%, 70%);
 }
 .social path {
   fill:hsl(200, 9%, 59%)
@@ -382,6 +382,9 @@ h2, .charmap {
   margin-left: -0.03em;
   min-font-size:35px;
 }
+.charmap {
+  margin-bottom: 1em;
+}
 
 h3 {
   letter-spacing:-.01em;
@@ -410,10 +413,10 @@ blockquote,ol,p,pre,table,ul {
 
 /*THEMES*/
 .play {
-  font-family:gidole_playregular;
+  font-family:gidolinyaregular;
 }
 .dark .social.fixed {
-  background-color: hsla(200, 4%, 13%, 0.9);
+  background-color: hsla(200, 4%, 13%, 0.95);
   border-bottom: 1px solid black;
 }
 .dark,
@@ -448,7 +451,11 @@ blockquote,ol,p,pre,table,ul {
 }
 
 .dark .jumbotron:before {
-  background-image:linear-gradient(to top,rgba(32,34,35,1) 0%,rgba(32,34,35,.98) 4%,rgba(32,34,35,.94) 8%,rgba(32,34,35,.85) 12%,rgba(32,34,35,.76) 16%,rgba(32,34,35,.72) 20%,rgba(32,34,35,.7) 24%,rgba(32,34,35,.7) 100%);
+  background-image:linear-gradient(to top,rgba(32,34,35,1) 0%,rgba(32,34,35,.95) 4%,rgba(32,34,35,.8) 8%,rgba(32,34,35,.5) 12%,rgba(32,34,35,.2) 16%,rgba(32,34,35,.05) 20%,rgba(32,34,35,0) 24%,rgba(32,34,35,0) 100%);
+  
+}
+.dark .jumbotron {
+    background:url(img/bgdarken.png) center center/cover no-repeat;
 }
 
 
@@ -529,7 +536,7 @@ td.tabular {
 .jumbotron {
   height:100%;
   width:100%;
-  background:url(img/boys.jpg) center center/cover no-repeat;
+  background:url(img/bg.png) center center/cover no-repeat;
   position:relative;
   opacity:0;
   filter:alpha(opacity=0);
@@ -554,7 +561,7 @@ td.tabular {
   width:100%;
   left:0;
   top:0;
-  background-image:linear-gradient(to top,rgba(255,255,255,1) 0%,rgba(255,255,255,.98) 4%,rgba(255,255,255,.94) 8%,rgba(255,255,255,.85) 12%,rgba(255,255,255,.76) 16%,rgba(255,255,255,.72) 20%,rgba(255,255,255,.7) 24%,rgba(255,255,255,.7) 100%);
+  background-image:linear-gradient(to top,rgba(255,255,255,1) 0%,rgba(255,255,255,.95) 4%,rgba(255,255,255,.8) 8%,rgba(255,255,255,.5) 12%,rgba(255,255,255,.2) 16%,rgba(255,255,255,.05) 20%,rgba(255,255,255,0) 24%,rgba(255,255,255,0) 100%);
   opacity:1;
   filter:alpha(opacity=100);
   z-index:10;
@@ -600,13 +607,15 @@ td.tabular {
   font-size:1em;
 /*  margin-left:-.05em;*/
 /*  padding-right: 0.1em;*/
-  margin-top:-50px
+  margin-top:-50px;
+  font-family:gidoleregular;
 }
 
 #tag {
   line-height:90%;
   letter-spacing:-.02em;
-  font-size:.38em
+  font-size:.38em;
+  font-family:gidolinyaregular;    
 }
 
 @-webkit-keyframes scale {
